# Robotic_Arm

flipkart_ws/install/: local_setup.sh  setup.sh
flipkart_ws/install/bot_description/share/bot_description/: local_setup.sh  package.sh  package.xml
flipkart_ws/install/cam_package/share/cam_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
flipkart_ws/install/my_cam_scripts/lib/my_cam_scripts/: get_image  get_image_integrated  pub_image  pub_image_try  ros_to_arduino  trial  xyz_publisher
flipkart_ws/install/my_cam_scripts/share/my_cam_scripts/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
flipkart_ws/install/my_msg_package/share/my_msg_package/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  (+2 more)
flipkart_ws/log/: latest_build  latest_list
flipkart_ws/src/cam_package/: setup.cfg  setup.py
flipkart_ws/src/my_cam_scripts/: setup.cfg  setup.py
flipkart_ws/src/my_cam_scripts/my_cam_scripts/: get_image.py  get_image_integrated.py
flipkart_ws/src/my_msg_package/: CMakeLists.txt
flipkart_ws/src/robotic_arm_controller/: CMakeLists.txt
flipkart_ws/src/robotic_arm_controller/config/: robotic_arm_controllers.yaml
flipkart_ws/src/robotic_arm_description1/: CMakeLists.txt
flipkart_ws/src/robotic_arm_description1/launch/: gazebo.launch.py
flipkart_ws/src/robotic_arm_description1/meshes/: base_link.stl  gripper_1.stl  link1_1.stl  link5_1.stl
flipkart_ws/src/robotic_arm_description1/urdf/: materials.xacro  robotic_arm1_gazebo.xacro  robotic_arm1_ros2_control.xacro
(+69 files in other folders)
